--- a/app/views/test/apis.html.haml
+++ b/app/views/test/apis.html.haml
@@ -1,10 +1,10 @@
 #user_nav
   %h2 Facebook
-  - if current_user
+  - if current_user && current_user.facebook
     Signed in as
     = succeed '!' do
       %strong= current_user.facebook.name
-    = link_to 'Sign out', signout_path, id: 'sign_out'
+    = link_to 'Sign out', signout_path, id: 'facebook_sign_out'
     %div
       %div Showing 10 friends
       %ul
@@ -13,6 +13,13 @@
             = link_to friend['name'], "https://www.facebook.com/#{friend['id']}", id: "fb_user_#{friend['id']}",
             target: '_blank'
   - else
-    = link_to 'Sign in with Facebook', '/auth/facebook', id: 'sign_in'
+    = link_to 'Sign in with Facebook', '/auth/facebook', id: 'facebook_sign_in'
   %h2 Instagram
+  - if current_user && current_user.instagram
+    Signed in as
+    = succeed '!' do
+      %strong= current_user.instagram.name
+    = link_to 'Sign out', signout_path, id: 'instagram_sign_out'
+  - else
+    = link_to 'Sign in with Instagram', "https://api.instagram.com/oauth/authorize/?client_id=#{ENV['INSTAGRAM_APP_ID']}&redirect_uri=http://localhost:3000/auth/instagram/callback&response_type=code", id: 'instagram_sign_in'
   %h2 foursquare
