--- a/app/views/test/apis.html.haml
+++ b/app/views/test/apis.html.haml
@@ -1,6 +1,6 @@
 #user_nav
   %h2 Facebook
-  - if current_user && current_user.facebook
+  - if current_user && current_user.has_network?(:facebook)
     Signed in as
     = succeed '!' do
       %strong= current_user.facebook.name
@@ -15,11 +15,15 @@
   - else
     = link_to 'Sign in with Facebook', '/auth/facebook', id: 'facebook_sign_in'
   %h2 Instagram
-  - if current_user && current_user.instagram
+  - if current_user && current_user.has_network?(:instagram)
     Signed in as
     = succeed '!' do
       %strong= current_user.instagram.name
     = link_to 'Sign out', signout_path, id: 'instagram_sign_out'
+    %div
+      %div Recent media
+      - current_user.instagram_api.user_recent_media.each do |media_item|
+        = image_tag(media_item.images.thumbnail.url)
   - else
     = link_to 'Sign in with Instagram', "https://api.instagram.com/oauth/authorize/?client_id=#{ENV['INSTAGRAM_APP_ID']}&redirect_uri=http://localhost:3000/auth/instagram/callback&response_type=code", id: 'instagram_sign_in'
   %h2 foursquare
