--- a/app/views/test/apis.html.haml
+++ b/app/views/test/apis.html.haml
@@ -29,7 +29,7 @@
       - current_user.instagram_api.user_recent_media.each do |media_item|
         = image_tag(media_item.images.thumbnail.url)
   - else
-    = link_to 'Sign in with Instagram', "https://api.instagram.com/oauth/authorize/?client_id=#{ENV['INSTAGRAM_APP_ID']}&redirect_uri=http://localhost:3000/auth/instagram/callback&response_type=code", id: 'instagram_sign_in'
+    = link_to 'Sign in with Instagram', callback_url(:instagram), id: 'instagram_sign_in'
   %h1 foursquare
   - if current_user && current_user.has_network?(:foursquare)
     Signed in as
@@ -43,4 +43,4 @@
       - current_user.foursquare_api.recent_checkins(limit: 10).each do |checkin|
         %p= "#{checkin.user.firstName} #{checkin.user.lastName} @ #{checkin.venue.name} (#{Time.at(checkin.createdAt)})"
   - else
-    = link_to 'Sign in with foursquare', "https://foursquare.com/oauth2/authenticate/?client_id=#{ENV['FOURSQUARE_APP_ID']}&response_type=code&redirect_uri=http://localhost:3000/auth/foursquare/callback", id: 'foursquare_sign_in'
+    = link_to 'Sign in with foursquare', callback_url(:foursquare), id: 'foursquare_sign_in'
