First approach to how we deal with user ranks

--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -10,12 +10,12 @@ jQuery ->
 window.fbAsyncInit = ->
   FB.init(appId: '<%= ENV["FACEBOOK_APP_ID"] %>', cookie: true)
 
-  $('#sign_in').click (e) ->
+  $('#facebook_sign_in').click (e) ->
     e.preventDefault()
     FB.login (response) ->
       window.location = '/auth/facebook/callback' if response.authResponse
 
-  $('#sign_out').click (e) ->
+  $('#facebook_sign_out').click (e) ->
     FB.getLoginStatus (response) ->
       FB.logout() if response.authResponse
     true
